Alterando o título da página (teste)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>flisoldf/Flisol-Inscri--es @ GitHub</title>
+	<title>FLISOL Inscrições</title>
 	
 	<style type="text/css">
 		body {
@@ -53,7 +53,8 @@
     </div>
 
     <h2>Contact</h2>
-<p> (scherolt@gmail.com), (bsbruno1@gmail.com), (contatogilsonsbf@gmail.com)<br/>      </p>
+<p> (scherolt@gmail.com), (bsbruno1@gmail.com), (contatogilsonsbf@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
